[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://shooter_enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://earth.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.tres" type="Environment" id=5]
[ext_resource path="res://game_music.wav" type="AudioStream" id=6]

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 800 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 640, 0 )
b = Vector2( 640, 800 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, 800 )
b = Vector2( 640, 800 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 640, 0 )

[node name="World" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
enemies = [ ExtResource( 3 ) ]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 800.0
color = Color( 0.0431373, 0.0509804, 0.0588235, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="earth" parent="." instance=ExtResource( 4 )]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 640 )

[node name="enemy_spawn_timer" type="Timer" parent="."]
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="bounds" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="bounds"]
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounds/StaticBody2D"]
position = Vector2( 1.42542, 0 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="bounds"]
collision_layer = 2147483648
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounds/StaticBody2D2"]
shape = SubResource( 3 )

[node name="StaticBody2D3" type="StaticBody2D" parent="bounds"]
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounds/StaticBody2D3"]
shape = SubResource( 4 )

[node name="StaticBody2D4" type="StaticBody2D" parent="bounds"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounds/StaticBody2D4"]
shape = SubResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -40.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="shooter_enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 43 )
[connection signal="earth_destroyed" from="." to="." method="_on_World_earth_destroyed"]
[connection signal="player_lost" from="." to="." method="_on_World_player_lost"]
[connection signal="dead" from="earth" to="." method="_on_earth_dead"]
[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
